# cosmic-applet-settings

./: Cargo.toml  README.md  justfile
resources/: io.github.reality2_roycdavies.cosmic-applet-settings.BingWallpaper.desktop  io.github.reality2_roycdavies.cosmic-applet-settings.Hotspot.desktop  io.github.reality2_roycdavies.cosmic-applet-settings.PieMenu.desktop  io.github.reality2_roycdavies.cosmic-applet-settings.RunKat.desktop  io.github.reality2_roycdavies.cosmic-applet-settings.Tailscale.desktop  io.github.reality2_roycdavies.cosmic-applet-settings.desktop
src/: app.rs  detection.rs  main.rs  pages.rs
