[package]
name = "cosmic-applet-settings"
version = "0.1.0"
edition = "2021"
authors = ["Roy C. Davies"]
license = "MIT"
description = "Unified settings app for custom COSMIC applets"
keywords = ["cosmic-desktop", "settings", "cosmic-applet", "linux", "system76"]
categories = ["gui"]
repository = "https://github.com/reality2-roycdavies/cosmic-applet-settings"
homepage = "https://github.com/reality2-roycdavies/cosmic-applet-settings"

[dependencies]
# COSMIC GUI toolkit (full app, not applet)
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = [
    "a11y",
    "tokio",
    "winit",
    "wgpu",
] }

# Async subprocess execution for settings protocol
tokio = { version = "1", features = ["process"] }

# Runtime detection
dirs = "5"

# Registration file parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
